snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.jar.sha256
c27f5f475eb00a7c8b5f0d5a53c6026bfed224683fb5f83fe5b695c61eb66258